# wav2avatar

./: .gitignore  LICENSE  README.md  avatar_ui.py  main.py  pyproject.toml  recv_wav2maya.py  setup.cfg  setup.py  stream_wav2maya.py
mri2avatar/maya_files/: mri_streaming_method_mouth.mb  mri_tongue.mb  new_stream_playground.py  qt_ui_stream.mb
mri2avatar/preprocessing/: data_analysis.ipynb
scripts/: autoanimate.mb  dataset_linear_inversion.py  headless_blast.py  recv_wav2maya.py  stream_wav2maya.py  venture.mov  web_vids.py
times/: stream_mngu0_model.txt  stream_mngu0_send.txt
wav2avatar/: requirements.txt
wav2avatar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wav2avatar/inversion/: linear_inversion.py  regression.ipynb  wav2ema.py
wav2avatar/maya_models/: face_teeth_tongue.mb  full_face_ema.mb  head_teeth_tongue.mb  midsagittal.mb  mngu0_s1_0001.mb  mngu0_s1_0008.mb  roger_avatar.gltf  roger_avatar.mtl  roger_head.fbx  roger_tongue.fbx  stream_head.mb  stream_mouth.mb  teeth_tongue.mb  tongue.fbx
wav2avatar/offline/: animate_ema.py  animate_new_face.py  save_playblast.py
wav2avatar/plugin_qt/: avatar_ui.py  print_hello.py
wav2avatar/streaming/: paper_testing.ipynb  stream_generator.py  unnorm_ema.py
wav2avatar/utils/: __init__.py  maya_utils.py  nema_data.py  utils.py  wav2batches.py  wav2ema.py
website/: emformer.py  nema.ipynb  nema_data.py  server.py
website/static/: default_avatar.fbx  index.css  main.js  main_working.js  midsagittal.fbx  midsagittal.js  midsagittal.mb  midsagittalv2.fbx  mngu0_s1_0008.npy  mngu0_s1_0008_tf.npy  (+9 more)
(+300 files in other folders)
