[metadata]
name = wav2avatar
version = 1.0
author = Tejas Prabhune
author_email = prabhune@berkeley.edu
description = Using inversion to visualize speech in real-time
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:

[options.packages.find]
include = wav2avatar